2013-09-23  Alan Modra  <amodra@gmail.com>

	* configure: Regenerate.

2013-09-03  Mike Stump  <mikestump@comcast.net>

	* sim-options.c (complete_option_list): Mark text and word const.

2013-06-28  Tom Tromey  <tromey@redhat.com>

	* Make-common.in (version.c): Use version.in, not
	common/version.in.
	* create-version.sh: Likewise.

2013-06-24  Joel Brobecker  <brobecker@adacore.com>

	* create-version.sh: New script. Adapted from
	gdb/commong/create-version.sh.
	* Make-common.in (version.c): Update rule dependencies,
	and re-implement using create-version.sh.

2013-06-21  Nick Clifton  <nickc@redhat.com>

	* gennltvals.sh: Add msp430 support.
	* nltvals.def: Regenerate.

2013-06-03  Mike Frysinger  <vapier@gentoo.org>

	* acinclude.m4: Replace maintainer-mode code with AM_MAINTAINER_MODE.
	* aclocal.m4, configure: Regenerate.

2013-05-10  Freddie Chopin  <freddie_chopin@op.pl>

	PR build/15414:
	* acinclude.m4 (SIM_AC_OPTION_WARNINGS): Do not use
	-Wformat-nonliteral with -Wno-format.

2013-03-26  Mike Frysinger  <vapier@gentoo.org>

	* acinclude.m4: Regenerate.

2013-03-23  Joel Sherrill  <joel.sherrill@oarcorp.com>

	* acinclude.m4: Add SIM_DV_SOCKSER_O which is empty  on hosts
	which do not support dv-sockser.o.  Add always as option to
	first argument to SIM_AC_OPTION_HARDWARE. Fail if hardware
	is always required to be enabled by simulator.

2012-08-28  Kaushik Phatak  <kaushik.phatak@kpitcummins.com>

	* gennltvals.sh: Use libgloss/syscall.h for cr16.
	* nltvals.def: Regenerate.

2012-06-16  Joel Brobecker  <brobecker@adacore.com>

	* acinclude.m4 (SIM_AC_COMMON): Define PACKAGE.
	* config.in, configure: Regenerate.

2012-05-24  Pedro Alves  <palves@redhat.com>

	* sim-signal.h (sim_signal_to_target): Rename to ...
	(sim_signal_to_gdb_signal): ... this.
	* sim-signal.c (sim_signal_to_target): Rename to ...
	(sim_signal_to_gdb_signal): ... this.
	* sim-reason.c (sim_stop_reason): Adjust to rename.

2012-05-24  Pedro Alves  <palves@redhat.com>

	PR gdb/7205
